objects/vtse__Send_Email__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Send Emails</relationshipLabel>
        <relationshipName>Send_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Send Emails</relationshipLabel>
        <relationshipName>Send_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Community_Link_Url__c</fullName>
        <label>Community Link Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vtse__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Send Emails</relationshipLabel>
        <relationshipName>Send_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Created_On__c</fullName>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vtse__Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vtse__Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vtse__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Send Emails</relationshipLabel>
        <relationshipName>Send_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Notify_Sender_When_Media_Launched__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Notify Sender When Media Launched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vtse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Send Emails</relationshipLabel>
        <relationshipName>Send_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Sent_From__c</fullName>
        <label>Sent From</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vtse__Sent_On__c</fullName>
        <label>Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vtse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Media Converting</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Send Email</label>
    <nameField>
        <displayFormat>SE-{0}</displayFormat>
        <label>Send Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send Emails</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>